--- a/events.html
+++ b/events.html
@@ -73,11 +73,14 @@
         <div class="col">
 
           <div class="card">
-            <img src="/ressources/img/r6.jpg" class="card-img-top" alt="...">
+            <img src="/ressources/img/r6.jpg" class="card-img-top" alt="image rainbow six">
             <div class="card-body">
 
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Samedi 15/01/2023 de 17h à 23h :</h5>
+              <p class="card-text">Ea corporis voluptatem est eligendi quis est similique quia non 
+                quis eaque et quas dolorem! Non officiis neque et pariatur autem vel tempora dolorem.
+                 Et repudiandae rerum ut enim dicta sit optio laborum eum enim corrupti qui fugiat 
+                 consequuntur et culpa aliquid est tempora mollitia.</p>
             </div>
             
           </div>
@@ -86,11 +89,14 @@
         <div class="col">
 
           <div class="card">
-            <img src="/ressources/img/tarkov.webp" class="card-img-top" alt="...">
+            <img src="/ressources/img/tarkov.webp" class="card-img-top" alt="image escape from tarkov">
 
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Du 22/01/2023 au 29/01/2023:</h5>
+              <p class="card-text">Ea corporis voluptatem est eligendi quis est similique quia non 
+                quis eaque et quas dolorem! Non officiis neque et pariatur autem vel tempora dolorem.
+                 Et repudiandae rerum ut enim dicta sit optio laborum eum enim corrupti qui fugiat 
+                 consequuntur et culpa aliquid est tempora mollitia</p>
             </div>
 
           </div>
@@ -99,11 +105,14 @@
         <div class="col">
 
           <div class="card">
-            <img src="/ressources/img/rocket.jpg" class="card-img-top" alt="...">
+            <img src="/ressources/img/rocket.jpg" class="card-img-top" alt="image rocket league">
 
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">Vendredi 05/02/2023 & Samedi 06/02/2023:</h5>
+              <p class="card-text">Ea corporis voluptatem est eligendi quis est similique quia non 
+                quis eaque et quas dolorem! Non officiis neque et pariatur autem vel tempora dolorem.
+                 Et repudiandae rerum ut enim dicta sit optio laborum eum enim corrupti qui fugiat 
+                 consequuntur et culpa aliquid est tempora mollitia</p>
             </div>
 
           </div>
@@ -112,11 +121,14 @@
         <div class="col">
           
           <div class="card">
-            <img src="/ressources/img/ds3.jpg" class="card-img-top" alt="...">
+            <img src="/ressources/img/ds3.jpg" class="card-img-top" alt="image dark souls 3">
 
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Du 15/02/2023 au 22/02/2023:</h5>
+              <p class="card-text">Ea corporis voluptatem est eligendi quis est similique quia non 
+                quis eaque et quas dolorem! Non officiis neque et pariatur autem vel tempora dolorem.
+                 Et repudiandae rerum ut enim dicta sit optio laborum eum enim corrupti qui fugiat 
+                 consequuntur et culpa aliquid est tempora mollitia</p>
             </div>
 
           </div>
