--- a/events.html
+++ b/events.html
@@ -53,7 +53,7 @@
         <div class="collapse navbar-collapse top_nav" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto ">
             <li class="nav-item">
-              <a href="home.html" class="nav-link">Acceuil</a>
+              <a href="home.html" class="nav-link">Accueil</a>
               <hr class="hr_nav">
             </li>
             <li class="nav-item "><a href="events.html" class="nav-link">Événements</a>
